# quran-irab-extractor

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  parser-quirk.yml
.github/workflows/: ci.yml
data/: quran-simple-clean.json  quran-uthmani.json
docs/: arabic-normalization.md  schema.md  source-format.md
samples/: al-fatiha.jsonl
sources/: README.md
src/quran_irab/: assemble.py  cli.py  db.py  normalize.py  surahs.py  tokenize.py  validate.py
tests/: test_assemble.py  test_db.py  test_normalize.py  test_validate.py
